--- a/core/template/mobile/AsusWRT.html
+++ b/core/template/mobile/AsusWRT.html
@@ -247,8 +247,12 @@
 			}
 		</script>
 		<div class="tooltips" style="display: #asus_clients_display#;">
-			<span title="Clients AsusWRT || Date de valeur : #asus_clients_value# || Date de collecte : #asus_clients_collect#" style="width:15px;max-width:15px;max-height:15px;">#asus_clients_icon#</span>
+			<span title="Infos Clients || Date de valeur : #asus_clients_value# || Date de collecte : #asus_clients_collect#" style="width:15px;max-width:15px;max-height:15px;">#asus_clients_icon#</span>
 			<span>#asus_clients#</span>
+		</div>
+		<div class="tooltips" style="display: #asus_wifi_temp_display#;">
+			<span title="Infos Températures WiFi || Date valeur : #asus_wifi_temp_value# || Date collecte : #asus_wifi_temp_collect#" style="width:15px;max-width:15px;max-height:15px;">#asus_wifi_temp_icon#</span>
+			<span id="asus_wifi_temp#id#"></span>
 		</div>
 		<div class="tooltips" style="display: #hdd_display#;">
 			<span title="Espace disque (% Libre) || Date valeur : #hdd_value# || Date collecte : #hdd_collect#" style="width:15px;max-width:15px;max-height:15px;">#hdd_icon#</span>
