--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -462,6 +462,48 @@
 				}
 			}
 		</script>
+		<div class="tooltips" style="display: #perso3_display#;">
+			<span title="#perso3_name#<br><i>Date de valeur : #perso3_value#<br>Date de collecte : #perso3_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#perso3_icon#</span>
+			<span id="perso3_unite#id#"></span>
+		</div>
+		<script>
+			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
+				if ('#perso3#' !== '') {
+					if (parseFloat('#perso3#') < parseFloat('#perso3_colorlow#')) {
+						document.getElementById('perso3_unite#id#').innerHTML = '<span title="Stats : #perso3_name#<br>Min: #perso3_minHistory# | Moy : #perso3_averageHistory# | Max : #perso3_maxHistory#" data-cmd_id="#perso3_id#" class="value history cursor tooltips" style="color: var(--al-success-color) !important;">#perso3#</span><span>#perso3_unite##perso3_tendance#</span>';
+					} else if ((parseFloat('#perso3#') >= parseFloat('#perso3_colorlow#')) && (parseFloat('#perso3#') <= parseFloat('#perso3_colorhigh#'))) {
+						document.getElementById('perso3_unite#id#').innerHTML = '<span title="Stats : #perso3_name#<br>Min: #perso3_minHistory# | Moy : #perso3_averageHistory# | Max : #perso3_maxHistory#" data-cmd_id="#perso3_id#" class="value history cursor tooltips" style="color: var(--al-warning-color) !important;">#perso3#</span><span>#perso3_unite##perso3_tendance#</span>';
+					} else if ((parseFloat('#perso3#') > parseFloat('#perso3_colorhigh#')) && parseFloat('#perso3_colorhigh#') !== '') {
+						document.getElementById('perso3_unite#id#').innerHTML = '<span title="Stats : #perso3_name#<br>Min: #perso3_minHistory# | Moy : #perso3_averageHistory# | Max : #perso3_maxHistory#" data-cmd_id="#perso3_id#" class="value history cursor tooltips" style="color: var(--al-danger-color) !important;">#perso3#</span><span>#perso3_unite##perso3_tendance#</span>';
+					} else {
+						document.getElementById('perso3_unite#id#').innerHTML = '<span title="Stats : #perso3_name#<br>Min: #perso3_minHistory# | Moy : #perso3_averageHistory# | Max : #perso3_maxHistory#" data-cmd_id="#perso3_id#" class="value history cursor tooltips">#perso3#</span><span>#perso3_unite##perso3_tendance#</span>';
+					}
+				} else {
+					document.getElementById('perso3_unite#id#').innerHTML = '<span></span>';
+				}
+			}
+		</script>
+		<div class="tooltips" style="display: #perso4_display#;">
+			<span title="#perso4_name#<br><i>Date de valeur : #perso4_value#<br>Date de collecte : #perso4_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#perso4_icon#</span>
+			<span id="perso4_unite#id#"></span>
+		</div>
+		<script>
+			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
+				if ('#perso4#' !== '') {
+					if (parseFloat('#perso4#') < parseFloat('#perso4_colorlow#')) {
+						document.getElementById('perso4_unite#id#').innerHTML = '<span title="Stats : #perso4_name#<br>Min: #perso4_minHistory# | Moy : #perso4_averageHistory# | Max : #perso4_maxHistory#" data-cmd_id="#perso4_id#" class="value history cursor tooltips" style="color: var(--al-success-color) !important;">#perso4#</span><span>#perso4_unite##perso4_tendance#</span>';
+					} else if ((parseFloat('#perso4#') >= parseFloat('#perso4_colorlow#')) && (parseFloat('#perso4#') <= parseFloat('#perso4_colorhigh#'))) {
+						document.getElementById('perso4_unite#id#').innerHTML = '<span title="Stats : #perso4_name#<br>Min: #perso4_minHistory# | Moy : #perso4_averageHistory# | Max : #perso4_maxHistory#" data-cmd_id="#perso4_id#" class="value history cursor tooltips" style="color: var(--al-warning-color) !important;">#perso4#</span><span>#perso4_unite##perso4_tendance#</span>';
+					} else if ((parseFloat('#perso4#') > parseFloat('#perso4_colorhigh#')) && parseFloat('#perso4_colorhigh#') !== '') {
+						document.getElementById('perso4_unite#id#').innerHTML = '<span title="Stats : #perso4_name#<br>Min: #perso4_minHistory# | Moy : #perso4_averageHistory# | Max : #perso4_maxHistory#" data-cmd_id="#perso4_id#" class="value history cursor tooltips" style="color: var(--al-danger-color) !important;">#perso4#</span><span>#perso4_unite##perso4_tendance#</span>';
+					} else {
+						document.getElementById('perso4_unite#id#').innerHTML = '<span title="Stats : #perso4_name#<br>Min: #perso4_minHistory# | Moy : #perso4_averageHistory# | Max : #perso4_maxHistory#" data-cmd_id="#perso4_id#" class="value history cursor tooltips">#perso4#</span><span>#perso4_unite##perso4_tendance#</span>';
+					}
+				} else {
+					document.getElementById('perso4_unite#id#').innerHTML = '<span></span>';
+				}
+			}
+		</script>
 	</div>
 	#divGraphInfo#
 </div>
