--- a/core/template/mobile/AsusWRT.html
+++ b/core/template/mobile/AsusWRT.html
@@ -256,12 +256,12 @@
 			}
 		</script>
 		<div class="tooltips" style="display: #asus_wan0_ip_display#;">
-			<span title="Infos Internet (WAN0) || Date valeur : #asus_wan0_ip_value# || Date collecte : #asus_wan0_ip_collect#" style="width:15px;max-width:15px;max-height:15px;">#asus_wan0_ip_icon#</span>
+			<span title="Infos Internet (WAN) || Date valeur : #asus_wan0_ip_value# || Date collecte : #asus_wan0_ip_collect#" style="width:15px;max-width:15px;max-height:15px;">#asus_wan0_ip_icon#</span>
 			<span id="asus_wan0_ip#id#"></span>
 		</div>
 		<script>
 			if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
-				document.getElementById('asus_wan0_ip#id#').innerHTML = '<span>#asus_wan0_ip#</span>';
+				document.getElementById('asus_wan0_ip#id#').innerHTML = '<span>IP (WAN) : #asus_wan0_ip#</span>';
 			}
 		</script>
 		<div class="tooltips" style="display: #asus_wifi_temp_display#;">
