--- a/core/template/dashboard/AsusWRT.html
+++ b/core/template/dashboard/AsusWRT.html
@@ -398,7 +398,7 @@
 				}
 			}
 		</script>
-		<div class="tooltips" style="display: #perso4_display#;"></div>
+		<div class="tooltips" style="display: #perso4_display#;">
 			<span title="#perso4_name#<br><i>Date de valeur : #perso4_value#<br>Date de collecte : #perso4_collect#</i>" style="width:15px;max-width:15px;max-height:15px;">#perso4_icon#</span>
 			<span id="perso4_unite#id#"></span>
 		</div>
